tests/ui/no-custom.stderr
error[E0277]: the trait bound `Thing: RefCastCustom<String>` is not satisfied
 --> tests/ui/no-custom.rs:8:36
  |
8 |     pub fn ref_cast(s: &String) -> &Self;
  |                                    ^^^^^ the trait `RefCastCustom<String>` is not implemented for `Thing`
  |
  = help: the trait `RefCastCustom<[From]>` is implemented for `[To]`
  = note: required for `&Thing` to implement `ref_cast::custom::RefCastOkay<&String>`
note: required by a bound in `ref_cast_custom`
 --> src/custom.rs
  |
  |     To: RefCastOkay<From>,
  |         ^^^^^^^^^^^^^^^^^ required by this bound in `ref_cast_custom`

error[E0071]: expected struct, variant or union type, found inferred type
 --> tests/ui/no-custom.rs:8:41
  |
8 |     pub fn ref_cast(s: &String) -> &Self;
  |                                         ^ not a struct

error[E0277]: the trait bound `Thing: RefCastCustom<String>` is not satisfied
 --> tests/ui/no-custom.rs:8:41
  |
8 |     pub fn ref_cast(s: &String) -> &Self;
  |                                         ^ the trait `RefCastCustom<String>` is not implemented for `Thing`
  |
  = help: the trait `RefCastCustom<[From]>` is implemented for `[To]`
  = note: required for `&Thing` to implement `ref_cast::custom::RefCastOkay<&String>`
